--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,17 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    
+
+    <build>
+    <plugins>
+        <plugin>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>3.10.0.2594</version> <!-- Update this version to the latest available version -->
+        </plugin>
+    </plugins>
+</build>
+
     <distributionManagement>
         <snapshotRepository>
             <id>nexusRepo</id>
